--- a/README.Rmd
+++ b/README.Rmd
@@ -1,6 +1,32 @@
-Example Git Project
-===================
+Getting Started
+===============
 
-R Markdown: Hello there!
+Build the docker image by typing in the terminal:
+```
+docker build . -t bios-611-project
+```
 
-Commit Number 2 Electric Boogaloo
+And then start an RStudio by typing in the terminal:
+
+```
+docker run -v $(pwd):/home/rstudio/project -p 8787:8787 -e PASSWORD=<some-password>
+```
+
+Once the Rstudio is running connect to it by visiting
+https://localhost:8787 in your browser. 
+
+Login to R studio with username:rstudio and password:some-password
+
+
+In the R console install the needed packages:
+
+```{R}
+library(tidyverse)
+install.packages("reshape2")
+library(reshape2)
+```
+To build the final report, visit the terminal in RStudio and type
+
+```
+make report.pdf
+```
